package bigtalkdesignMod.v02.v2_6;

public abstract class CashSuper {
    public abstract double acceptCash(double price, int num);
}
